<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="end"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/bblack"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="end"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/bblack"
        android:textSize="60sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="bottom">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="6"
            android:rowCount="5">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnBracketLeft"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/orange"
                android:text="("
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btnBracketRight"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/orange"
                android:text=")"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/orange"
                android:text="÷"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="@string/yetti"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="8"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="9"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="4"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="5"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="3"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="bac"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/black"
                android:text="."
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_row="4"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/orange"
                android:text="="
                android:textColor="@color/white"
                android:textSize="25sp" />


        </GridLayout>


    </RelativeLayout>

</LinearLayout>